--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>e-Commerce-Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
-    <link rel="icon" href="assets/favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <script src="https://kit.fontawesome.com/11a9221ebe.js" crossorigin="anonymous"></script>
     
 </head>
@@ -16,7 +16,7 @@
     <!-- header section -->
     <section id="header">
         <a href="#">
-            <img src="assets/asset 2.svg" alt=""
+            <img src="asset 2.svg" alt=""
             class="logo">
         </a>
         <div>
@@ -50,32 +50,32 @@
 
     <section id="feature" class="section-p1">
         <div class="fe-box">
-            <img src="image/4192736.jpg" alt="">
+            <img src="a1.jpg" alt="">
             <h6>free shipping</h6>
         </div>
 
         <div class="fe-box">
-            <img src="image/5739256.jpg" alt="">
+            <img src="a2.jpg" alt="">
             <h6>online order</h6>
         </div>
 
         <div class="fe-box">
-            <img src="image/3567810.jpg" alt="">
+            <img src="a3.jpg" alt="">
             <h6>save money</h6>
         </div>
 
         <div class="fe-box">
-            <img src="image/promotion.jpg" alt="">
+            <img src="promotion.jpg" alt="">
             <h6>Promotions</h6>
         </div>
 
         <div class="fe-box">
-            <img src="image/download (3).jpg" alt="">
+            <img src="download (3).jpg" alt="">
             <h6>Happy Sell</h6>
         </div>
 
         <div class="fe-box">
-            <img src="image/service 24.jpg" alt="">
+            <img src="service 24.jpg" alt="">
             <h6>Support 24*7</h6>
         </div>
     </section>
@@ -87,7 +87,7 @@
         <p>Winter Collection New Mordern Design</p>
         <div class="pro-container">
             <div class="pro">
-                <img src="assets/asset 24.jpeg" alt="">
+                <img src="asset 24.jpeg" alt="">
                 <div class="description">
                     <span>Adidas</span>
                     <h5>Hoodie</h5>
@@ -102,7 +102,7 @@
                 <a href="#"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
             <div class="pro">
-                <img src="assets/asset 25.jpeg" alt="">
+                <img src="asset 25.jpeg" alt="">
                 <div class="description">
                     <span>Spark</span>
                     <h5>Full t-shirt</h5>
@@ -118,7 +118,7 @@
                 <a href="#"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
             <div class="pro">
-                <img src="assets/asset 27.jpeg" alt="">
+                <img src="asset 27.jpeg" alt="">
                 <div class="description">
                     <span>Granny-T</span>
                     <h5>Ladies Astronaut T-shirts</h5>
@@ -132,7 +132,7 @@
                 <a href="#"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
             <div class="pro">
-                <img src="assets/asset 28.jpeg" alt="">
+                <img src="asset 28.jpeg" alt="">
                 <div class="description">
                     <span>Amul-Comfy</span>
                     <h5>Ladies fancy T-shirts</h5>
@@ -147,7 +147,7 @@
                 <a href="#"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
             <div class="pro">
-                <img src="assets/asset 29.jpeg" alt="">
+                <img src="asset 29.jpeg" alt="">
                 <div class="description">
                     <span>Krishna Hoseiry</span>
                     <h5>Black Lahnga</h5>
@@ -159,7 +159,7 @@
                 <a href="#"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
             <div class="pro">
-                <img src="assets/asset 30.jpeg" alt="">
+                <img src="asset 30.jpeg" alt="">
                 <div class="description">
                     <span>PN- Malhotra</span>
                     <h5>Stylish Black blazer</h5>
@@ -174,7 +174,7 @@
                 <a href="#"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
             <div class="pro">
-                <img src="assets/asset 31.jpeg" alt="">
+                <img src="asset 31.jpeg" alt="">
                 <div class="description">
                     <span>Western-metre</span>
                     <h5>Brown Gown</h5>
@@ -190,7 +190,7 @@
                 <a href="#"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
             <div class="pro">
-                <img src="assets/asset 32.jpeg" alt="">
+                <img src="asset 32.jpeg" alt="">
                 <div class="description">
                     <span>Oswal</span>
                     <h5> Mens jacket</h5>
@@ -222,7 +222,7 @@
         <p>Shoes collection New Modern Design</p>
         <div class="pro-container">
             <div class="pro">
-                <img src="assets/asset 26.jpeg" alt="">
+                <img src="asset 26.jpeg" alt="">
                 <div class="description">
                     <span>B9-Trader</span>
                     <h5>Round Cap</h5>
@@ -237,7 +237,7 @@
                 <a href="#"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
             <div class="pro">
-                <img src="assets/asset 35.jpeg" alt="">
+                <img src="asset 35.jpeg" alt="">
                 <div class="description">
                     <span>adidas</span>
                     <h5>White Shoe</h5>
@@ -253,7 +253,7 @@
                 <a href="#"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
             <div class="pro">
-                <img src="assets/asset 36.jpeg" alt="">
+                <img src="asset 36.jpeg" alt="">
                 <div class="description">
                     <span>Red Chief</span>
                     <h5>Mountain Climbing Shoe</h5>
@@ -269,7 +269,7 @@
                 <a href="#"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
             <div class="pro">
-                <img src="assets/asset 37.jpeg" alt="">
+                <img src="asset 37.jpeg" alt="">
                 <div class="description">
                     <span>Bata</span>
                     <h5>Ladies High Heal Sandle</h5>
@@ -285,7 +285,7 @@
                 <a href="#"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
             <div class="pro">
-                <img src="assets/asset 38.jpeg" alt="">
+                <img src="asset 38.jpeg" alt="">
                 <div class="description">
                     <span>Rebok</span>
                     <h5>Fancy shoes</h5>
@@ -301,7 +301,7 @@
                 <a href="#"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
             <div class="pro">
-                <img src="assets/asset 39.jpeg" alt="">
+                <img src="asset 39.jpeg" alt="">
                 <div class="description">
                     <span>Gucci</span>
                     <h5>White Shoes</h5>
@@ -317,7 +317,7 @@
                 <a href="#"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
             <div class="pro">
-                <img src="assets/asset 40.jpeg" alt="">
+                <img src="asset 40.jpeg" alt="">
                 <div class="description">
                     <span>Bata</span>
                     <h5>Black professional Shoes</h5>
@@ -333,7 +333,7 @@
                 <a href="#"><i class="fa-solid fa-cart-plus"></i></a>
             </div>
             <div class="pro">
-                <img src="assets/asset 41.jpeg" alt="">
+                <img src="asset 41.jpeg" alt="">
                 <div class="description">
                     <span>WoodlAnd</span>
                     <h5>Black fancy Shoes</h5>
@@ -397,7 +397,6 @@
 
     <footer class="section-p1">
         <div class="col">
-            <!-- <img class="logo" src="assets/asset 2.svg" alt=""> -->
             <h4>Contact</h4>
             <p><strong>Address:</strong> xyz Laxmi Nagar,Delhi</p>
             <p><strong>Phone:</strong> +91-9888888888</p>
@@ -405,10 +404,10 @@
             <div class="follow">
                 <h4>follow us</h4>
                 <div class="icon">
-                    <img src="image/asset 28.png" alt="">
-                    <img src="image/asset 29.png" alt="">
-                    <img src="image/asset 30.png" alt="">
-                    <img src="image/asset 31.png" alt="">
+                    <img src="asset 28.png" alt="">
+                    <img src="asset 29.png" alt="">
+                    <img src="asset 30.png" alt="">
+                    <img src="asset 31.png" alt="">
                 </div>
             </div>
         </div>
@@ -433,11 +432,11 @@
             <h4>Install App</h4>
             <p>from App store or google Play</p>
             <div class="row">
-                <img id="google" src="image/icon google play.jpg" alt="">
+                <img id="google" src="icon google play.jpg" alt="">
                 <img src="" alt="">
             </div>
             <p>Secured Payment Gateway</p>
-            <img src="assets/asset 69.png" alt="">
+            <img src="asset 69.png" alt="">
         </div>
 
         <div class="copyright">
