--- a/index.html
+++ b/index.html
@@ -398,8 +398,8 @@
     <footer class="section-p1">
         <div class="col">
             <h4>Contact</h4>
-            <p><strong>Address:</strong> xyz Laxmi Nagar,Delhi</p>
-            <p><strong>Phone:</strong> +91-9888888888</p>
+            <p><strong>Address:</strong> Lucknow, U.P.</p>
+            <p><strong>Phone:</strong> +91-9450311427</p>
             <p><strong>Hours:</strong>10:00-18:00, Mon-Sat </p>
             <div class="follow">
                 <h4>follow us</h4>
